Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     </section>
 
     <section class="main-content">
-      <h1>
+      <p><img src="https://dl.dropboxusercontent.com/u/2705545/ustbaana/images/main/ustbaana_logo.gif" alt="北京科技大学北美校友会(USTB-AANA) Logo"></p>
+
+<h1>
 <a id="欢迎访问北京科技大学北美校友会ustb-aana" class="anchor" href="#%E6%AC%A2%E8%BF%8E%E8%AE%BF%E9%97%AE%E5%8C%97%E4%BA%AC%E7%A7%91%E6%8A%80%E5%A4%A7%E5%AD%A6%E5%8C%97%E7%BE%8E%E6%A0%A1%E5%8F%8B%E4%BC%9Austb-aana" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>欢迎访问北京科技大学北美校友会(USTB-AANA)</h1>
 
       <footer class="site-footer">
