--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
       <section id="main_content">
-        <p><img src="https://dl.dropboxusercontent.com/u/2705545/ustbaana/images/main/ustbaana_logo.gif" alt="北京科技大学北美校友会(USTB-AANA) Logo"></p>
+        <p><img src="images/ustbaana_logo.gif" alt="北京科技大学北美校友会(USTB-AANA) Logo"></p>
 
 <h1>
 <a id="欢迎大家加入北美校友会微信群请用手机微信扫描以下二维码" class="anchor" href="#%E6%AC%A2%E8%BF%8E%E5%A4%A7%E5%AE%B6%E5%8A%A0%E5%85%A5%E5%8C%97%E7%BE%8E%E6%A0%A1%E5%8F%8B%E4%BC%9A%E5%BE%AE%E4%BF%A1%E7%BE%A4%E8%AF%B7%E7%94%A8%E6%89%8B%E6%9C%BA%E5%BE%AE%E4%BF%A1%E6%89%AB%E6%8F%8F%E4%BB%A5%E4%B8%8B%E4%BA%8C%E7%BB%B4%E7%A0%81" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>欢迎大家加入北美校友会微信群，请用手机微信扫描以下二维码：</h1>
